# fruit_detection

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
application/: app.py
fruit_detection/: config.py  create_dir.py  data_generator.py  evaluate_model.py  get_model.py  main.py  save_model.py  train_model.py
notebook/: notebook.ipynb  requirements.txt
plant_seedlings/: config.py  create_dir.py  data_generator.py  evaluate_model.py  get_model.py  main.py  save_model.py  train_model.py
tests/: test.py
